--- a/casestudy-module/build.gradle
+++ b/casestudy-module/build.gradle
@@ -23,6 +23,12 @@ tasks.withType(JavaCompile) {
 
 dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
+    // https://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-spec
+    implementation group: 'org.apache.taglibs', name: 'taglibs-standard-spec', version: '1.2.5'
+    // https://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-impl
+    runtimeOnly group: 'org.apache.taglibs', name: 'taglibs-standard-impl', version: '1.2.5'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+
 
     testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
